@@ -1,3 +1,14 @@
+2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b6
+
+ * Update: Gallery 1.5.8 works with phpBB2 up to 2.0.22
+
+ * Fix: HTML Fix in usermanagement.
+
+ * Change: Added a target to links to printservices.
+
+ * Fix: Show 'comment' statistics link only when comments are enabled.
+        Also some HTML nicify.
+
 2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b5
 
  * Change: Give better information when adding an item in case its a movie.
